substrate/primitives/api/test/tests/ui/mock_advanced_missing_hash.stderr
error: If using the `advanced` attribute, it is required that the function takes at least one argument, the `Hash`.
  --> tests/ui/mock_advanced_missing_hash.rs:32:3
   |
32 |         fn test(&self) -> Result<(), ApiError> {
   |         ^^
